--- a/TwitterAuth/TwitterAuth.csproj
+++ b/TwitterAuth/TwitterAuth.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TwitterEmail.cs" />
     <Compile Include="Services\TwitterService.cs" />
+    <Compile Include="Services\TwitterHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
