--- a/Forms/TwitterAuth.Forms.Android/packages.config
+++ b/Forms/TwitterAuth.Forms.Android/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PCLCrypto" version="2.0.147" targetFramework="monoandroid80" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="monoandroid80" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="monoandroid80" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="monoandroid80" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="monoandroid80" />
+  <package id="Validation" version="2.2.8" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
